Ajotu animation au clique sur surface

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
               dur="2000"
               from="-5 -20 -5"
               to="-5 30 -5"
-              repeat="indefinite"></a-animation>
+              ></a-animation>
       </a-entity>
-      <a-entity mixin="cylinder" class="c1" position="3 -20 -5">
+      <a-entity mixin="cylinder" class="c" position="3 -20 -5">
         <a-animation attribute="position"
               begin="start"
               dur="2000"
               from="3 -20 -5"
               to="3 30 -5"
-              repeat="indefinite"></a-animation>
+              ></a-animation>
       </a-entity>
-      <a-entity mixin="cylinder" class="c2" position="6 -17 -1">
+      <a-entity mixin="cylinder" class="c" position="6 -17 -1">
         <a-animation attribute="position"
               begin="start"
               dur="2000"
               from="6 -50 -1"
               to="6 40 -1"
-              repeat="indefinite"></a-animation>
+              ></a-animation>
       </a-entity>
       <a-entity mixin="cylinder" class="c" position="0 -20 1">
         <a-animation attribute="position"
@@ -57,7 +57,7 @@
               dur="2000"
               from="0 -50 1"
               to="0 30 1"
-              repeat="indefinite"></a-animation>
+              ></a-animation>
       </a-entity>
       <a-entity mixin="cylinder" class="c" position="2 -90 3">
         <a-animation attribute="position"
@@ -65,7 +65,7 @@
               dur="2000"
               from="2 -90 3"
               to="2 30 3"
-              repeat="indefinite"></a-animation>
+              ></a-animation>
       </a-entity>
     </a-entity>
   <!-- middle -->
@@ -76,7 +76,7 @@
             dur="6500"
             from="3 -70 -3"
             to="3 40 -3"
-            repeat="indefinite">
+            >
             <a-animation attribute="scale"
                 dur="6500"
                 from="3 -70 -3"
@@ -89,7 +89,7 @@
             dur="6000"
             from="1 -70 2.6"
             to="1 40 -2.6"
-            repeat="indefinite">
+            >
             <a-animation attribute="scale"
                 dur="6000"
                 from="1 -70 -2.6"
@@ -102,7 +102,7 @@
             dur="6000"
             from="-3 -70 -1.5"
             to="-3 40 -1.5"
-            repeat="indefinite">
+            >
             <a-animation attribute="scale"
                 dur="6000"
                 from="-3 -70 -1.5"
@@ -115,7 +115,7 @@
             dur="6000"
             from="-1.7 -70 1.7"
             to="-1.7 40 1.7"
-            repeat="indefinite">
+            >
             <a-animation attribute="scale"
                 dur="6000"
                 from="-1.7 -70 1.7"
@@ -128,7 +128,7 @@
             dur="6000"
             from="0 -70 -2.9"
             to="0 40 -2.9"
-            repeat="indefinite">
+            >
             <a-animation attribute="scale"
                 dur="6000"
                 from="0 -70 -2.9"
@@ -145,7 +145,7 @@
               dur="10000"
               from="3 -120 -1"
               to="3 40 -1"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3 -120 -1"
@@ -158,7 +158,7 @@
               dur="10000"
               from="-3 -120 -1"
               to="-3 40 -1"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3 -120 -1"
@@ -171,7 +171,7 @@
               dur="10000"
               from="-3 -120 1"
               to="-3 40 1"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3 -120 1"
@@ -184,7 +184,7 @@
               dur="10000"
               from="3 -120 1"
               to="3 40 1"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3 -120 1"
@@ -197,7 +197,7 @@
               dur="10000"
               from="-3.4 -120 0"
               to="-3.4 40 0"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.4 -120 0"
@@ -210,7 +210,7 @@
               dur="10000"
               from="3.4 -120 0"
               to="3.4 40 0"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.4 -120 0"
@@ -223,7 +223,7 @@
               dur="10000"
               from="-2.8 -120 -0.4"
               to="-2.8 40 -0.4"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-2.8 -120 -0.4"
@@ -236,7 +236,7 @@
               dur="10000"
               from="2.8 -120 -0.4"
               to="2.8 40 -0.4"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="2.8 -120 -0.4"
@@ -249,7 +249,7 @@
               dur="10000"
               from="-3.3 -120 -1.6"
               to="-3.3 40 -1.6"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.3 -120 -1.6"
@@ -262,7 +262,7 @@
               dur="10000"
               from="3.3 -120 -1.6"
               to="3.3 40 -1.6"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.3 -120 -1.6"
@@ -275,7 +275,7 @@
               dur="10000"
               from="-3.3 -120 1.6"
               to="-3.3 40 1.6"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.3 -120 1.6"
@@ -288,7 +288,7 @@
               dur="10000"
               from="3.3 -120 1.6"
               to="3.3 40 1.6"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.3 -120 1.6"
@@ -301,7 +301,7 @@
               dur="10000"
               from="-3.1 -120 0.5"
               to="-3.1 40 0.5"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.1 -120 0.5"
@@ -314,7 +314,7 @@
               dur="10000"
               from="3.1 -120 0.5"
               to="3.1 40 0.5"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.1 -120 0.5"
@@ -328,7 +328,7 @@
               dur="10000"
               from="-2.9 -120 -2"
               to="-2.9 40 -2"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-2.9 -120 -2"
@@ -341,7 +341,7 @@
               dur="10000"
               from="2.9 -120 -2"
               to="2.9 40 -2"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="2.9 -120 -2"
@@ -354,7 +354,7 @@
               dur="10000"
               from="3.7 -120 -1.7"
               to="3.7 40 -1.7"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.7 -120 -1.7"
@@ -367,7 +367,7 @@
               dur="10000"
               from="-3.7 -120 -1.7"
               to="-3.7 40 -1.7"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.7 -120 -1.7"
@@ -381,7 +381,7 @@
               dur="10000"
               from="1 -120 -4"
               to="1 40 -4"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="1 -120 -4"
@@ -394,7 +394,7 @@
               dur="10000"
               from="-1 -120 -4"
               to="-1 40 -4"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-1 -120 -4"
@@ -407,7 +407,7 @@
               dur="10000"
               from="0 -120 -3.3"
               to="0 40 -3.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="0 -120 -3.3"
@@ -420,7 +420,7 @@
               dur="10000"
               from="-0.3 -120 -4.3"
               to="-0.3 40 -4.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-0.3 -120 -4.3"
@@ -433,7 +433,7 @@
               dur="10000"
               from="0.7 -120 -4.3"
               to="0.7 40 -4.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="0.7 -120 -4.3"
@@ -446,7 +446,7 @@
               dur="10000"
               from="-2.2 -120 -3.3"
               to="-2.2 40 -3.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-2.2 -120 -3.3"
@@ -459,7 +459,7 @@
               dur="10000"
               from="2.2 -120 -3.3"
               to="2.2 40 -3.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="2.2 -120 -3.3"
@@ -472,7 +472,7 @@
               dur="10000"
               from="-3 -120 -3"
               to="-3 40 -3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3 -120 -3"
@@ -485,7 +485,7 @@
               dur="10000"
               from="3 -120 -3"
               to="3 40 -3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3 -120 -3"
@@ -498,7 +498,7 @@
               dur="10000"
               from="-3.7 -120 -2.8"
               to="-3.7 40 -2.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.7 -120 -2.8"
@@ -511,7 +511,7 @@
               dur="10000"
               from="3.7 -120 -2.8"
               to="3.7 40 -2.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.7 -120 -2.8"
@@ -524,7 +524,7 @@
               dur="10000"
               from="-2 -120 -3.8"
               to="-2 40 -3.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-2 -120 -3.8"
@@ -537,7 +537,7 @@
               dur="10000"
               from="2 -120 -3.8"
               to="2 40 -3.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="2 -120 -3.8"
@@ -551,7 +551,7 @@
               dur="10000"
               from="3 -120 2"
               to="3 40 2"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3 -120 2"
@@ -564,7 +564,7 @@
               dur="10000"
               from="1 -120 4"
               to="1 40 4"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="1 -120 4"
@@ -577,7 +577,7 @@
               dur="10000"
               from="-1 -120 4"
               to="-1 40 4"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-1 -120 4"
@@ -590,7 +590,7 @@
               dur="10000"
               from="0 -120 3.3"
               to="0 40 3.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="0 -120 3.3"
@@ -603,7 +603,7 @@
               dur="10000"
               from="-0.3 -120 4.3"
               to="-0.3 40 4.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-0.3 -120 4.3"
@@ -616,7 +616,7 @@
               dur="10000"
               from="0.7 -120 4.3"
               to="0.7 40 4.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="0.7 -120 4.3"
@@ -629,7 +629,7 @@
               dur="10000"
               from="-2.2 -120 3.3"
               to="-2.2 40 3.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-2.2 -120 3.3"
@@ -642,7 +642,7 @@
               dur="10000"
               from="2.2 -120 3.3"
               to="2.2 40 3.3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="2.2 -120 3.3"
@@ -655,7 +655,7 @@
               dur="10000"
               from="-3 -120 3"
               to="-3 40 3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3 -120 3"
@@ -668,7 +668,7 @@
               dur="10000"
               from="3 -120 3"
               to="3 40 3"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3 -120 3"
@@ -681,7 +681,7 @@
               dur="10000"
               from="-3.7 -120 2.8"
               to="-3.7 40 2.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-3.7 -120 2.8"
@@ -694,7 +694,7 @@
               dur="10000"
               from="3.7 -120 2.8"
               to="3.7 40 2.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="3.7 -120 2.8"
@@ -707,7 +707,7 @@
               dur="10000"
               from="-2 -120 3.8"
               to="-2 40 3.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="-2 -120 3.8"
@@ -720,7 +720,7 @@
               dur="10000"
               from="2 -120 3.8"
               to="2 40 3.8"
-              repeat="indefinite">
+              >
               <a-animation attribute="scale"
                   dur="10000"
                   from="2 -120 3.8"
@@ -728,10 +728,12 @@
             </a-animation>
       </a-entity>
     </a-entity>
-    <a-entity id="Start" geometry="primitive: box; width:1; height:1; d" position="0 3 0"></a-entity>
+    <a-entity id="Start" geometry="primitive: box; width:8; height:5; depth:0.1;" material="opacity:0.6;" position="0 3 0">
+      <a-animation attribute="material.opacity" begin="fade" to="0"></a-animation>
+    </a-entity>
     <a-entity position="0 1.8 5">
     <a-camera wasd-controls>
-      <a-entity cursor="fuse: true; maxDistance:10; timeout:500;" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.09; radiusInner: 0.07;" material="color: white;shader: flat;"></a-entity>
+      <a-entity cursor="fuse: true; maxDistance:10;" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.09; radiusInner: 0.07;" material="color: white;shader: flat;"></a-entity>
     </a-camera>
     </a-entity>
     <a-sky color="#ECECEC"></a-sky>
