--- a/index.html
+++ b/index.html
@@ -728,12 +728,12 @@
             </a-animation>
       </a-entity>
     </a-entity>
-    <a-entity id="Start" geometry="primitive: box; width:8; height:5; depth:0.1;" material="opacity:0.6;" position="0 3 0">
+    <a-entity id="Start" geometry="primitive: box; width:8; height:5; depth:0.1;" material="opacity:0.6;" position="0 3 0" sound="src: Link_Start.mp3;autoplay: true;">
       <a-animation attribute="material.opacity" begin="fade" to="0"></a-animation>
     </a-entity>
     <a-entity position="0 1.8 5">
     <a-camera wasd-controls>
-      <a-entity cursor="fuse: true; maxDistance:10;" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.09; radiusInner: 0.07;" material="color: white;shader: flat;"></a-entity>
+      <a-entity cursor="maxDistance:10;" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.05; radiusInner: 0.03;" material="color: white;shader: flat;"></a-entity>
     </a-camera>
     </a-entity>
     <a-sky color="#ECECEC"></a-sky>
