Test avec Cardboard

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
             </a-animation>
       </a-entity>
     </a-entity>
-    <a-entity id="Start" geometry="primitive: box; width:8; height:5; depth:0.1;" material="opacity:0.6;" position="0 3 0" sound="src: Link_Start.mp3;autoplay: true;">
+    <a-entity id="Start" geometry="primitive: box; width:8; height:5; depth:0.1;" material="opacity:0.6;" position="0 3 0" sound="src: Link_Start.mp3;">
       <a-animation attribute="material.opacity" begin="fade" to="0"></a-animation>
     </a-entity>
     <a-entity position="0 1.8 5">
